Renamed service to client and implemented environment variables for the client.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=WebWatch-service
 
 website.url=${WEBSITE_URL}
+
+pushbullet.token=${PUSHBULLET_TOKEN}
+pushbullet.url=${PUSHBULLET_URL}
